<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MathMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ch44txtTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36dp" />

    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num1"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/ch44hint1"
        android:gravity="center_horizontal"
        android:numeric="integer" />

    <EditText
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num2"
        android:layout_alignBottom="@+id/num1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/ch44hint2"
        android:gravity="center_horizontal"
        android:numeric="integer" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch44radAdd"
            android:id="@+id/radAdd"
            android:checked="true"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch44radSubtract"
            android:id="@+id/radSubtract"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch44radMultiply"
            android:id="@+id/radMultiply"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch44radDivide"
            android:id="@+id/radDivide"
            android:layout_gravity="center_horizontal" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch44btnFlash"
        android:id="@+id/btnFlash"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:layout_below="@+id/btnFlash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="40dp"
        android:textColor="#fffb93ff" />


</RelativeLayout>
