<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".JetMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch11txtTitle"
        android:textSize="30sp"
        android:id="@+id/textView"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:ems="10"
        android:hint="@string/ch11hint1"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/txtMiles"
        android:layout_alignStart="@+id/txtMiles"
        android:layout_marginTop="23dp">
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMiles"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/ch11hint2"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch11btnStatus"
        android:id="@+id/btnStatus"
        android:layout_below="@+id/txtMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="40sp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgRewards"
        android:src="@drawable/rewards"
        android:contentDescription="@string/ch11imgDescription"
        android:layout_below="@+id/btnStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />


</RelativeLayout>
