<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow>
        <ImageView
            android:id="@+id/imgBike"
            android:contentDescription="@string/ch9txtDescription"
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:src="@drawable/bike"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/ch9txtBike"
            android:textSize="20sp"
            android:paddingRight="40sp"/>

    </TableRow>

    <TableRow>
        <ImageView
            android:id="@+id/imgBarge"
            android:contentDescription="@string/ch9txtDescription"
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:src="@drawable/barge"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/ch9txtBarge"
            android:textSize="20sp"
            android:paddingRight="40sp"/>

    </TableRow>

    <TableRow>
        <ImageView
            android:id="@+id/imgBudapest"
            android:contentDescription="@string/ch9txtDescription"
            android:layout_width="150dp"
            android:layout_height="95dp"
            android:src="@drawable/budapest"
            android:padding="5sp"
            />
        <TextView
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:text="@string/ch9txtBudapest"
            android:textSize="20sp"
            android:paddingRight="40sp"/>

    </TableRow>

</TableLayout>