<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CarMainActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/ch42txtTitle"
    android:id="@+id/textView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:textSize="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:hint="@string/ch42hint"
        android:gravity="center_horizontal"
        android:numeric="integer" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="120sp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:id="@+id/ra"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch42radCompact"
            android:id="@+id/radCompact"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch42radMidSize"
            android:id="@+id/radMidSize"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ch42radLuxury"
            android:id="@+id/radLuxury"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView2"
        android:layout_below="@id/ra"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="#ffff00eb" />

</RelativeLayout>
