<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BillMainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ch35txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGroup"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:prompt="@string/ch35prompt"
        android:spinnerMode="dialog"
        android:entries="@array/txtGroup" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtBill"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:hint="@string/ch35txtBill"
        android:numeric="integer|decimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch35btnCalculate"
        android:id="@+id/btnCalculate"
        android:layout_below="@+id/txtBill"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/waitress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtTip"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtParty"
        android:layout_above="@+id/btnCalculate"
        android:layout_toRightOf="@+id/txtBill"
        android:layout_toEndOf="@+id/txtBill"
        android:numeric="integer"
        android:hint="@string/ch35txtParty" />


</RelativeLayout>
