<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WaveMainActivity">
<ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:id="@+id/imgSurf"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:contentDescription="@string/Ch10imgDescription"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imgSurf"
        android:layout_marginTop="50dp"
        android:text="@string/Ch10btnStart"
        android:textSize="12sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStop"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/btnStart"
        android:layout_alignBottom="@+id/btnStart"
        android:text="@string/Ch10btnStop"
        android:textSize="12sp"/>

</RelativeLayout>
